Add app, menu, resource api to README.md